--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.3"
   }
 }
