--- a/package.json
+++ b/package.json
@@ -17,11 +17,8 @@
     "bcrypt": "^5.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "mongoose": "^7.3.0",
     "node-cron": "^3.0.2",
-    "nodemailer": "^6.9.3",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "nodemailer": "^6.9.3"
   }
 }
